tests/rascal/negative/parse_errors/L4/record-reserved.ob
MODULE Bla;

BEGIN
  RECORD := 1
END Bla.